--- a/leeds_virtual_museums/templates/base.html
+++ b/leeds_virtual_museums/templates/base.html
@@ -1,1 +1,40 @@
 {% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Leeds Virtual Museum</title>
+        <link rel="stylesheet" href="{% static '/css/common.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    </head>
+
+    <body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/account">Account</a>
+                </li>
+                <li>
+                    <a href="/curriculum">Curriculum</a>
+                </li>
+                <li>
+                    <a href="/evaluation">Evaluation</a>
+                </li>
+                <li>
+                    <a href="/plan_visit">Plan your visit</a>
+                </li>
+            </ul>
+        </nav>
+
+        {% block content %}
+        {% endblock %}
+
+        <footer class="footer">
+            <div class="container">
+                
+            </div>
+        </footer>
+    </body>
+</html>
