--- a/leeds_virtual_museums/static/css/common.css
+++ b/leeds_virtual_museums/static/css/common.css
@@ -1,3 +1,18 @@
 .title {
     margin-top: 50px;
 }
+
+html, body {
+    height: 100%;
+    min-height: 100%;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 100px;
+    padding-top: 30px;
+    bottom: 0;
+    height: 150px;
+    width: 100%;
+    background-color: #f5f5f5;
+}
