--- a/leeds_virtual_museums/templates/curriculum.html
+++ b/leeds_virtual_museums/templates/curriculum.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1>Curriculum page</h1>
+<h1 class="title">Curriculum page</h1>
 {% endblock %}
