--- a/leeds_virtual_museums/templates/evaluation.html
+++ b/leeds_virtual_museums/templates/evaluation.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
 <h1>Evaluation page</h1>
 
-<a href="/evaluation_quiz">Go to quiz</a>
+<a href="/evaluation_quiz" class="btn btn-primary">Go to quiz</a>
+
 {% endblock %}
