--- a/leeds_virtual_museums/templates/home.html
+++ b/leeds_virtual_museums/templates/home.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
 <h1 class="title">Homepage</h1>
+<p class="title" id="introduction"> This is a paragraph. </p>
+
+
 {% endblock %}
