--- a/leeds_virtual_museums/static/css/common.css
+++ b/leeds_virtual_museums/static/css/common.css
@@ -16,3 +16,8 @@ html, body {
     width: 100%;
     background-color: #f5f5f5;
 }
+
+#introduction {
+    text-align: center;
+    background-color: aqua;
+}
