--- a/leeds_virtual_museums/templates/login.html
+++ b/leeds_virtual_museums/templates/login.html
@@ -11,9 +11,18 @@
 {% endif %}
 <div id="login_block">
     <form method="POST" action=""> {% csrf_token %}
-        <p>Username: <input type="text" name="username"></p>
-        <p>Password: <input type="text" name="password"></p>
+        <p>Username: <input type="text" name="username" required></p>
+        <p>Password: <input type="text" name="password" required></p>
         <input type="submit" value="login" name="login">
+    </form>
+</div>
+
+<div id="register_block">
+    <form method="POST" action=""> {% csrf_token %}
+        <p>Username: <input type="text" name="username" required></p>
+        <p>Password: <input type="text" name="password" required></p>
+        <p>Confirm password: <input type="text" name="confirm_password" required></p>
+        <input type="submit" value="register" name="register">
     </form>
 </div>
 
