--- a/leeds_virtual_museums/templates/evaluation.html
+++ b/leeds_virtual_museums/templates/evaluation.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Evaluation page</h1>
-
-<a href="/evaluation_quiz" class="btn btn-primary">Go to quiz</a>
+<p>{{ evaluation_result }}</p>
+<a href="/evaluation_quiz?question=0" class="btn btn-primary">Go to quiz</a>
 
 {% endblock %}
