--- a/leeds_virtual_museums/templates/course.html
+++ b/leeds_virtual_museums/templates/course.html
@@ -3,12 +3,16 @@
 {% block content %}
 <div class="row">
     <div class="col-3">
-        <h3>Category</h3>
+        <h3>{{ course_name }}</h3>
+        {% for section in category %}
+        <a class="row" href="/course?course={{ course_number }}&section={{ forloop.counter0 }}">{{ section }}</a>
+        {% endfor %}
+        <a class="row" href="/course_question?course={{ course_number }}">Quiz</a>
     </div>
+
 
     <div class="col-9">
         <h1>{{ header }}</h1>
-    
         {% for paragraph in content %}
         <p>{{ paragraph }}</p>
         {% endfor %}
