--- a/leeds_virtual_museums/templates/base.html
+++ b/leeds_virtual_museums/templates/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
 
+    <body>
     {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="navbar-nav mr-auto">
@@ -34,9 +35,10 @@
     </nav>
     {% endif %}
 
-    <body>
+    <div id="main-div">
         {% block content %}
         {% endblock %}
+    </div>
     </body>
 
     <footer class="footer">
