enable ticket exchange

--- a/leeds_virtual_museums/templates/account.html
+++ b/leeds_virtual_museums/templates/account.html
@@ -14,4 +14,9 @@
 <span>{{item}}</span>
 {% endfor %}
 
+<h3>My tickets</h3>
+{% for ticket in tickets %}
+<span>{{ticket}}</span>
+{% endfor %}
+
 {% endblock %}
