--- a/leeds_virtual_museums/static/css/common.css
+++ b/leeds_virtual_museums/static/css/common.css
@@ -1,6 +1,3 @@
-.title {
-    margin-top: 50px;
-}
 
 html, body {
     height: 100%;
@@ -9,14 +6,15 @@ html, body {
 
 #main-div {
     min-height: 100%;
+    margin-top: 70px;
 }
 
 .footer {
     text-align: center;
     margin-top: 100px;
-    padding-top: 30px;
+    padding-top: 100px;
     bottom: 0;
-    height: 150px;
+    height: 100px;
     width: 100%;
     background-color: #f5f5f5;
 }
@@ -30,10 +28,27 @@ html, body {
     height: 100%;
     min-height: 700px;
     width: 100%;
+    margin-bottom: 100px;
 }
 
 iframe {
     height: 100%;
     position: absolute;
     border: none;
+}
+
+nav {
+    background-color: lightgrey;
+}
+
+#home-header {
+    height: 800px;
+    width: 100%;
+    background-image: url(../images/museum2.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.main-container {
+    padding-top: 40px;
 }
