--- a/leeds_virtual_museums/templates/account.html
+++ b/leeds_virtual_museums/templates/account.html
@@ -2,21 +2,26 @@
 {% load static %}
 {% block content %}
 
-<h1>Account page</h1>
+<div class="container main-container">
+    <h1>Account page</h1>
 
-<h3>My scores</h3>
-{% for course, score in curriculum_status %}
-<span>{{course}}: {{score}}</span>
-{% endfor %}
-
-<h3>My items</h3>
-{% for item in items %}
-<span>{{item}}</span>
-{% endfor %}
-
-<h3>My tickets</h3>
-{% for ticket in tickets %}
-<span>{{ticket}}</span>
+    <h3>My scores</h3>
+    {% for course, score in curriculum_status %}
+    <span>{{course}}: {{score}}</span>
+    {% endfor %}
+    
+    <h3>My items</h3>
+    {% for item in items %}
+    <img src="{% static 'images/the_artist.jpg' %}" width="100px" height="100px">
+    <span>{{item}}</span>
+    {% endfor %}
+    
+    <h3>My tickets</h3>
+    {% for ticket in tickets %}
+    <span>{{ticket}}</span>
+    <!-- <img src="{% static 'images/the_artist.jpg' %}" width="100px" height="100px"> -->
+    <div class="tenor-gif-embed" data-postid="18576121" data-share-method="host" data-aspect-ratio="1.25" data-width="150px"><a href="https://tenor.com/view/art-painting-gif-18576121">Art Painting GIF</a>from <a href="https://tenor.com/search/art-gifs">Art GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</div>
 {% endfor %}
 
 {% endblock %}
