--- a/leeds_virtual_museums/templates/base.html
+++ b/leeds_virtual_museums/templates/base.html
@@ -4,34 +4,40 @@
     <head>
         <title>Leeds Virtual Museum</title>
         <link rel="stylesheet" href="{% static '/css/common.css' %}">
+        <link rel="stylesheet" href="{% static '/css/style.css' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
     </head>
 
     <body>
     {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/account">Account</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/curriculum">Curriculum</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/evaluation">Evaluation</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/plan_visit">Plan your visit</a>
-            </li>
-            <li class="nav-item">
-                <form method="POST" action="/login"> {% csrf_token %}
-                    <input type="submit" value="logout" name="logout" class="nav-link">
-                </form>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" href="/">Leeds Virtual Museum</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/curriculum">Curriculum</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/evaluation">Evaluation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/plan_visit">Plan your visit</a></li>
+                </ul>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="/login">logout</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
     {% endif %}
 
@@ -41,9 +47,13 @@
     </div>
     </body>
 
-    <footer class="footer">
-        <div class="container">
-            <p>Author: Yuwen Liu</p>
-        </div>
+    <footer class="bg-light py-5">
+        <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Yuwen Liu</div></div>
     </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SimpleLightbox plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </html>
