--- a/leeds_virtual_museums/templates/course.html
+++ b/leeds_virtual_museums/templates/course.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="row" id="course">
-    <div class="col-2">
-        <h5>{{ course_name }}</h5>
-        {% for section in category %}
-        <a href="/course?course={{ course_number }}&section={{ forloop.counter0 }}">{{ section }}</a>
-        <br>
-        {% endfor %}
-        <a href="/course_question?course={{ course_number }}">Quiz</a>
-    </div>
-
-
-    <div class="col-10">
-        <h1>{{ header }}</h1>
-        <iframe id="course_content" src="{{link}}" width="100%" height="1000px"></iframe>
-    </div>
+<div class="container main-container">
+    <div class="row" id="course">
+        <div class="col-2">
+            <h5>{{ course_name }}</h5>
+            {% for section in category %}
+            <a href="/course?course={{ course_number }}&section={{ forloop.counter0 }}">{{ section }}</a>
+            <br>
+            {% endfor %}
+            <a href="/course_question?course={{ course_number }}">Quiz</a>
+        </div>
+    
+    
+        <div class="col-10">
+            <h1>{{ header }}</h1>
+            <iframe id="course_content" src="{{link}}" width="110%" height="700px"></iframe>
+        </div>
+    </div>    
 </div>
 
 <script>
