--- a/leeds_virtual_museums/templates/home.html
+++ b/leeds_virtual_museums/templates/home.html
@@ -2,8 +2,18 @@
 {% load static %}
 {% block content %}
 
-<h1 class="title">Homepage</h1>
-<p class="title" id="introduction"> This is a paragraph. </p>
-
-
+<header id="home-header">
+    <div class="container px-4 px-lg-5 h-100">
+        <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center text-center">
+            <div class="col-lg-8 align-self-end">
+                <h1 class="text-white font-weight-bold">Leeds Virtual Museum</h1>
+                <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+                <p class="text-white mb-5">Evaluate, learn, win NFTs and event tickets</p>
+                <a class="btn btn-xl text-white" href="/evaluation">Evaluate now</a>
+            </div>
+        </div>
+    </div>
+</header>
 {% endblock %}
