--- a/leeds_virtual_museums/templates/evaluation.html
+++ b/leeds_virtual_museums/templates/evaluation.html
@@ -3,9 +3,16 @@
 {% block content %}
 
 <div class="container main-container">
-    <h1>Evaluation page</h1>
-    <p>{{ evaluation_result }}</p>
-    <a href="/evaluation_quiz?question=0" class="btn btn-primary">Go to quiz</a>
+    <h1>Evaluation</h1>
+    <br>
+    {% if evaluated %}
+    <h5>The course for you: <a href="/curriculum">{{ evaluation_result }}</a></h5>
+    <br>
+    <a href="/evaluation_quiz?question=0" class="btn btn-primary">Evaluate again</a>
+    {% else %}
+    <h5>{{ evaluation_result }}</h5>
+    <a href="/evaluation_quiz?question=0" class="btn btn-primary">Evaluate now</a>
+    {% endif %}
 </div>
 
 {% endblock %}
