--- a/leeds_virtual_museums/templates/curriculum.html
+++ b/leeds_virtual_museums/templates/curriculum.html
@@ -21,16 +21,17 @@
     
     <br>
     <h3>Other courses</h3>
-    {% for course_num, course_name, _, _ in other_courses %}
-    <div class="card curriculum">
-        <img class="card-img-top" src="{% static '/images/the_artist.jpg' %}" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">{{ course_name }}</h5>
-            <a class="btn btn-primary" href="/course?course={{ course_num }}">Explore</a>
+    <div class="row">
+        {% for course_num, course_name, _, _ in other_courses %}
+        <div class="card curriculum">
+            <img class="card-img-top" src="{% static '/images/the_artist.jpg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{ course_name }}</h5>
+                <a class="btn btn-primary" href="/course?course={{ course_num }}">Explore</a>
+            </div>
         </div>
+        {% endfor %}
     </div>
 </div>
-
-{% endfor %}
 
 {% endblock %}
