--- a/leeds_virtual_museums/templates/home.html
+++ b/leeds_virtual_museums/templates/home.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-lg-8 align-self-baseline">
                 <p class="text-white mb-5">Evaluate, learn, win NFTs and event tickets</p>
-                <a class="btn btn-xl text-white" href="/evaluation" style="border-color: white;">Evaluate now</a>
+                <a class="btn btn-xl text-white" href="/evaluation" style="border-color: white;">Find the course for you</a>
             </div>
         </div>
     </div>
