update pictures display

--- a/leeds_virtual_museums/templates/account.html
+++ b/leeds_virtual_museums/templates/account.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 
+<header id="account-header">
 <div class="container main-container">
     <h1>My Account</h1>
 
@@ -15,9 +16,9 @@
     <h3>Items</h3>
     <div class="row">
         {% for item in items %}
-        <div class="card ticket border-0 col-2">
+        <div class="card ticket border-0 col-3 bg-transparent">
             <h5 class="card-title">{{item}}</h5>
-            <img src="{% static 'images/the_artist.jpg' %}" width="100px" height="100px"> 
+            <img src="{% static 'images/' %}{{ items_pic|get_item:item }}" width="100px" height="100px"> 
         </div>
         {% endfor %}
     </div>
@@ -26,16 +27,13 @@
     <h3>Tickets</h3>
     <div class="row">
         {% for ticket in tickets %}
-        <div class="card ticket border-0 col-2">
+        <div class="card ticket border-0 col-3 bg-transparent">
             <h5 class="card-title">{{ticket}}</h5>
-            <!-- <img src="{% static 'images/the_artist.jpg' %}" width="100px" height="100px"> -->
-            <div class="tenor-gif-embed" data-postid="18576121" data-share-method="host" data-aspect-ratio="1.25" data-width="150px">
-                <a href="https://tenor.com/view/art-painting-gif-18576121">Art Painting GIF</a>
-            </div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            <img src="{% static 'images/' %}{{ tickets_pic|get_item:ticket }}" width="100px" height="100px"> 
         </div>
         {% endfor %}
     </div>
 </div>
-
+</header>
 
 {% endblock %}
