--- a/leeds_virtual_museums/static/css/common.css
+++ b/leeds_virtual_museums/static/css/common.css
@@ -70,3 +70,12 @@ nav {
     padding-top: 40px;
     padding-bottom: 50px;
 }
+
+#account-header {
+    height: 800px;
+    width: 100%;
+    background-image: url(../images/account\ background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    color: white;
+}
