--- a/leeds_virtual_museums/templates/curriculum.html
+++ b/leeds_virtual_museums/templates/curriculum.html
@@ -9,7 +9,7 @@
     {% if recommandation %}
     <h3>Recommanded for you</h3>
     <div class="card curriculum">
-        <img class="card-img-top" src="/static/images/{{ pic_files|get_item:course_number }}" alt="Card image cap">
+        <img class="card-img-top" src="/static/images/{{ pic_files|get_item:course_number }}" alt="Card image cap" height="220px">
         <div class="card-body">
             <h5 class="card-title">{{ recommandation }}</h5>
             <a class="btn btn-primary" href="/course?course={{ course_number }}">Explore</a>
@@ -24,7 +24,7 @@
     <div class="row">
         {% for course_num, course_name, _, _ in other_courses %}
         <div class="card curriculum">
-            <img class="card-img-top" src="/static/images/{{ pic_files|get_item:course_num }}" alt="Card image cap">
+            <img class="card-img-top" src="/static/images/{{ pic_files|get_item:course_num }}" alt="Card image cap" height="220px">
             <div class="card-body">
                 <h5 class="card-title">{{ course_name }}</h5>
                 <a class="btn btn-primary" href="/course?course={{ course_num }}">Explore</a>
